hphp/test/slow/memoize/abstract.php.expectf
Fatal error: Abstract method foo::bar cannot be memoized in %s/test/slow/memoize/abstract.php on line 5